--- a/install
+++ b/install
@@ -1,4 +1,5 @@
-#!/bin/bash
+#!/usr/bin/env bash
+set -eo pipefail; [[ $DOKKU_TRACE ]] && set -x
 
 if [[ ! -z "$DOKKU_DEV" ]]; then
   ./commands volume:install
